[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/SampleCombatScene.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/PlayerCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://misc resources/ResetTurn.tres" type="Animation" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Options:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("PlayerCharacter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "Wingman1->2"
tracks/0/type = "value"
tracks/0/path = NodePath("Options:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Wingman2->Player"
tracks/0/type = "value"
tracks/0/path = NodePath("Options:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[node name="SampleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="DebugText" type="RichTextLabel" parent="."]
margin_right = 276.0
margin_bottom = 77.0
text = "text"

[node name="Button" type="Button" parent="."]
margin_left = 312.0
margin_top = -6.0
margin_right = 415.0
margin_bottom = 67.0

[node name="PlayerCharacter" parent="." instance=ExtResource( 2 )]
position = Vector2( 455, 263 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 1 )
anims/SceneAnimations = ExtResource( 3 )
anims/Wingman1->2 = SubResource( 2 )
anims/Wingman2->Player = SubResource( 3 )

[node name="Options" type="Node2D" parent="."]
position = Vector2( 480, 601 )

[node name="Wingman1Options" type="Node2D" parent="Options"]
position = Vector2( -100, 0 )
rotation = 4.71239

[node name="Button" type="Button" parent="Options/Wingman1Options"]
margin_right = 69.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="Options/Wingman1Options"]
margin_left = 2.0
margin_top = 29.0
margin_right = 75.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button3" type="Button" parent="Options/Wingman1Options"]
margin_left = 2.0
margin_top = 58.0
margin_right = 73.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wingman2Options" type="Node2D" parent="Options"]
position = Vector2( 0, -100 )

[node name="Button" type="Button" parent="Options/Wingman2Options"]
margin_right = 69.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="Options/Wingman2Options"]
margin_left = 2.0
margin_top = 29.0
margin_right = 75.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button3" type="Button" parent="Options/Wingman2Options"]
margin_left = 2.0
margin_top = 58.0
margin_right = 73.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerOptions" type="Node2D" parent="Options"]
position = Vector2( 100, 0 )
rotation = 1.5708

[node name="Button" type="Button" parent="Options/PlayerOptions"]
margin_left = 0.526672
margin_top = -1.04321
margin_right = 69.5267
margin_bottom = 26.9568
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="Options/PlayerOptions"]
margin_left = 2.0
margin_top = 29.0
margin_right = 75.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button3" type="Button" parent="Options/PlayerOptions"]
margin_left = 2.0
margin_top = 58.0
margin_right = 73.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
